--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,9 @@
 			src="https://kit.fontawesome.com/edc3cc40f1.js"
 			crossorigin="anonymous"
 		></script>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 	</body>
 </html>
